# Jenkins-cmake-test

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  JenkinsFile  Jenkinsfile  Makefile  README.md  cmake_install.cmake  hello_world
Testing/Temporary/: CTestCostData.txt
src/: main.cpp  utils.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_main.cpp  tests
